--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
 
 # dependencies
 /node_modules
@@ -7,12 +13,13 @@
 
 # testing
 /coverage
-.env
+
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
