--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "async_hooks": "^1.0.0"
   }
 }
